fix overflow hidden

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ code {
   src: url(./fonts/GILLIGAN.TTF);
 }
 
-#root {
+#coconut {
   height: 100vh;
   width: 100vw;
   overflow: hidden;
